# lazycat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac  lazycat-gtk.sh
common/: Makefile.am  Makefile.in  common.c  common.h  logger.scm  message.scm  parsers.c  parsers.h  protocol.scm  proxy.scm  translator.scm  utils.scm  xsockets.c  xsockets.h
host/: Makefile.am  Makefile.in  lctcpd.c  lctcpd.scm
lazycat/: .gitignore  Makefile.am  protocol.scm  proxy.scm  rpc.x  utils.scm
lazycat-daemon/: Makefile.am  Makefile.in  config.scm  curiosity.scm  diff.scm  host-list.scm  host.scm  lazycat-daemon.c  lazycatd.scm  main.scm  periodical-ping.scm  proxy-list.scm  server.c  translator-list.scm
lazycat/daemon/: Makefile.am  config.scm  curiosity.scm  diff.scm  host-list.scm  host.scm  lazycat-daemon.c  lazycatd.scm  periodical-ping.scm  proxy-list.scm  translator-list.scm
lazycat/proxies/: ssh-proxy.scm
lazycat/proxy/: Makefile.am  ssh-proxy.scm  tcp-proxy.scm
lazycat/trans/: portage.scm
lazycat/ui/: Makefile.am
lazycat/ui/gtk/: add-host-dialog.scm  host-tree.scm  output-view.scm
proxies/: Makefile.am  Makefile.in  ssh-proxy.scm  tcp-proxy.c  tcp-proxy.h  tcp-proxy.scm
proxies/ssh-proxy/: lazy-ssh.c  lazy-ssh.h  libssh-compat.h  ssh-proxy.c  ssh-proxy.h  ssh-proxy.scm
proxies/tcp-proxy/: tcp-proxy.c  tcp-proxy.h  tcp-proxy.scm
scheme/: config.scm  diff.scm  host-list.scm  host.scm  lazy-gtk-cat.scm  lc-gtk-add-host-dialog.scm  lc-gtk-host-tree.scm  lc-gtk-output-preview-dialog.scm  lc-gtk-output-view.scm  logger.scm  tools.scm
server/: db.c  db.h  scmapi.c  scmapi.h  server.c  server.h  sighandlers.c  sighandlers.h
server/scm/: config.scm  diff.scm  host-list.scm  host.scm  lazycatd.scm  logger.scm  main.scm  protocol.scm  utils.scm
trans/: Makefile.am  apt.scm  portage.scm
ui/: Makefile.am  Makefile.in  lazycat-gtk  lazycat-gtk.scm  lc  lc.in  lc.scm
ui/cli/: format-table.scm  pretty-format.scm
ui/gtk/: host-tree.scm  lazy-gtk-cat.scm  output-preview-dialog.scm  output-view.scm
